--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
     "angular-route": "^1.5.0",
     "bluebird": "^3.3.4",
     "body-parser": "^1.15.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.1",
     "ejs": "^2.4.1",
     "express": "^4.12.3",
+    "express-session": "^1.13.0",
     "mongoose": "^4.0.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "path": "^0.11.14",
     "pow-mongodb-fixtures": "^0.10.0"
   }
