--- a/package.json
+++ b/package.json
@@ -1,18 +1,32 @@
 {
-  "devDependencies": {
+  "name": "appjs-pfe",
+  "version": "0.0.1",
+  "description": "application-PFE",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "dependencies": {
     "angular": "^1.5.0",
     "angular-route": "^1.5.0",
+    "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.3.4",
     "body-parser": "^1.15.0",
-    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.1",
-    "ejs": "^2.4.1",
+    "debug": "~2.2.0",
+    "events": "^1.1.0",
     "express": "^4.12.3",
     "express-session": "^1.13.0",
+    "jsonwebtoken": "^5.7.0",
+    "method-override": "^2.0.2",
     "mongoose": "^4.0.1",
+    "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "path": "^0.11.14",
-    "pow-mongodb-fixtures": "^0.10.0"
-  }
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^1.4.5"
+  },
+  "author": "",
+  "license": "ISC"
 }
