--- a/bower.json
+++ b/bower.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "angular": "^1.5.0",
     "bootstrap": "^3.3.6",
-    "font-awesome": "^4.5.0"
+    "font-awesome": "^4.5.0",
+    "angular-socket-io": "^0.7.0"
   },
-  "install":{
+  "install": {
     "path": "public/libs"
   }
 }
