--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^5.7.0",
     "method-override": "^2.0.2",
     "mongoose": "^4.0.1",
+    "mongoose-relationship": "^0.1.5",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
